--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions && node preinstallHotfix",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
